--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -96,27 +96,27 @@
                     </li>
 
                     <!-- <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_2">Como Funciona</a>
+                        <a class="nav-link click-scroll" href="">Como Funciona</a>
                     </li> -->
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_3">Recursos do Love Stories</a>
+                        <a class="nav-link click-scroll" href="#section_2">Recursos do Love Stories</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_4">Depoimentos</a>
+                        <a class="nav-link click-scroll" href="#section_3">Depoimentos</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_5">Galeria</a>
+                        <a class="nav-link click-scroll" href="#section_4">Valores</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_6">Peça o seu</a>
+                        <a class="nav-link click-scroll" href="#section_5">Peça o seu</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#section_7">Suporte</a>
+                        <a class="nav-link click-scroll" href="#section_6">Suporte</a>
                     </li>
                 </ul>
             </div>
@@ -153,7 +153,7 @@
         </section>
 
 
-        <!-- <section class="about-section section-padding" id="section_2">
+        <!-- <section class="about-section section-padding" id="">
             <div class="container">
                 <div class="row">
 
@@ -246,7 +246,7 @@
             </div>
         </section> -->
 
-        <section class="the-wedding-section section-bg section-padding" id="section_3">
+        <section class="the-wedding-section section-bg section-padding" id="section_2">
             <div class="container">
                 <div class="row">
 
@@ -377,7 +377,7 @@
             </div>
         </section>
 
-        <section class="people-section section-padding" id="section_4">
+        <section class="people-section section-padding" id="section_3">
             <div class="container">
                 <div class="row">
 
@@ -511,7 +511,7 @@
             </div>
         </section>
 
-        <section class="gallery-section section-bg section-padding" id="section_5">
+        <section class="gallery-section section-bg section-padding" id="section_4">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12 text-center mb-5">
@@ -569,7 +569,7 @@
         </section>
 
 
-        <section class="rsvp-section section-padding" id="section_6">
+        <section class="rsvp-section section-padding" id="section_5">
             <div class="container">
                 <div class="row">
 
@@ -623,7 +623,7 @@
             </div>
         </section>
 
-        <section class="contact-section section-bg section-padding" id="section_7">
+        <section class="contact-section section-bg section-padding" id="section_6">
             <div class="container">
                 <div class="row">
 
