--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -47,6 +47,7 @@
         </div>
     </section>
 
+    {% if cliente.plano.slug == 'premium' %}
     <section class="counter">
         <div class="container">
             <h2>Nosso Tempo Juntos</h2>
@@ -72,6 +73,7 @@
             </div>
         </div>
     </section>
+    {% endif %}
 
     <section class="letter">
         <div class="container">
@@ -103,6 +105,7 @@
         </div>
     </section>
 
+    {% if cliente.plano.slug == 'premium' %}
     <section class="music-player">
         <div class="container">
             <h2>Nossas Músicas</h2>
@@ -148,6 +151,7 @@
             </div>
         </div>
     </section>
+    {% endif %}
 
     <section class="moments">
         <div class="container">
