fix: reajuste mostrar funcionalidades de cada plano

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    {% if cliente.plano.slug == 'premium' %}
+    {% if cliente.plano == 'PREMIUM' %}
     <section class="counter">
         <div class="container">
             <h2>Nosso Tempo Juntos</h2>
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    {% if cliente.plano.slug == 'premium' %}
+    {% if cliente.plano == 'PREMIUM' %}
     <section class="music-player">
         <div class="container">
             <h2>Nossas Músicas</h2>
