fix: ajuste numero whatsapp e add icone titok

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -673,7 +673,7 @@
                         </p>
 
                         <p>
-                            <a href="https://wa.me/5561981904314?text=Olá, quero saber mais sobre a Love Stories!">
+                            <a href="https://wa.me/5561998401140?text=Olá, quero saber mais sobre a Love Stories!">
                                 61 9 9840-1140
                             </a>
                         </p>
@@ -689,8 +689,11 @@
                                     class="social-icon-link bi-instagram"></a></li>
 
                             <li class="social-icon-item"><a target="_blank"
-                                    href="https://wa.me/5561981904314?text=Olá, quero saber mais sobre a Love Stories!"
+                                    href="https://wa.me/5561998401140?text=Olá, quero saber mais sobre a Love Stories!"
                                     class="social-icon-link bi-whatsapp"></a></li>
+
+                            <li class="social-icon-item"><a target="_blank" href=""
+                                    class="social-icon-link bi-tiktok"></a></li>
 
                             <!-- <li class="social-icon-item"><a href="https://fb.com/tooplate" target="_blank"
                                     class="social-icon-link bi-facebook"></a></li> -->
