fix: ajuste erro tela em android

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -41,6 +41,11 @@
         .rsvp-section {
             background-image: url("{% static 'home/images/form.png' %}");
         }
+
+        html,
+        body {
+            overscroll-behavior: none;
+        }
     </style>
 
     <!--
@@ -139,7 +144,7 @@
 
                         <h1 class="text-white hero-title mb-4">Seu amor merece uma história inesquecível</h1>
 
-                        <a href="#section_2" class="custom-link custom-btn btn mt-4">Crie sua Love Story</a>
+                        <a href="#section_4" class="custom-link custom-btn btn mt-4">Crie sua Love Story</a>
                     </div>
 
                     <div class="col-lg-3 col-12 save-the-date-wrap mt-auto ms-lg-auto">
