fix: ajuste erro tela em android no site dos clientes

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -26,6 +26,11 @@
             background-position: center;
             z-index: -1;
         }
+
+        html,
+        body {
+            overscroll-behavior: none;
+        }
     </style>
     {% endif %}
     {% endfor %}
