--- a/templates/static/core/css/style.css
+++ b/templates/static/core/css/style.css
@@ -6,10 +6,10 @@
 }
 
 html {
-  overscroll-behavior: none;
-  overscroll-behavior-y: none;
-  touch-action: pan-y;
-  height: 100%;
+    overscroll-behavior: none;
+    overscroll-behavior-y: none;
+    touch-action: pan-y;
+    height: 100%;
 }
 
 body {
@@ -57,13 +57,26 @@ p {
 .hero {
     position: relative;
     height: 100vh;
-    overflow: hidden;
+    overflow: visible;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: white;
     padding: 20px;
+    will-change: transform;
+}
+
+.hero-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    will-change: transform;
 }
 
 .hero-content {
