--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -15,13 +15,16 @@
     {% if item.tipo == 'hero' %}
     <style>
         .hero-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
             url('{{ item.imagem.imagem.url }}');
-        }
-
-        html,
-        body {
-            overscroll-behavior: none;
+            background-size: cover;
+            background-position: center;
+            z-index: -1;
         }
     </style>
     {% endif %}
