fix: volta dos corações

--- a/templates/static/core/css/style.css
+++ b/templates/static/core/css/style.css
@@ -636,9 +636,9 @@ footer a:hover {
         transform: none !important;
     }
 
-    .floating-hearts {
+    /* .floating-hearts {
         display: none;
-    }
+    } */
 
     .control-btn:hover {
         transform: none !important;
