--- a/templates/static/core/css/style.css
+++ b/templates/static/core/css/style.css
@@ -6,14 +6,19 @@
 }
 
 html {
-    overscroll-behavior: none;
+    -webkit-overflow-scrolling: touch;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #fff5f7;
     color: #333;
-    overscroll-behavior: none;
+    line-height: 1.6;
+    min-height: 100%;
+    overflow-x: hidden; /*se n der certo, pode tirar*/
+    overflow-y: scroll; /* Força a barra de scroll permanente */
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .container {
