feat: script otimizado

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -34,9 +34,7 @@
 </head>
 
 <body>
-    <div class="preloader">
-        <div class="heart"></div>
-    </div>
+    <div class="preloader"></div>
 
     <section class="hero">
         <div class="hero-bg"></div>
@@ -210,7 +208,7 @@
 
     <div class="floating-hearts"></div>
 
-    <script src="{% static 'core/js/script.js' %}"></script>
+    <script src="{% static 'core/js/script_otimized.js' %}"></script>
 
     <script>
 
