Revert "fix: hero image in home"
This reverts commit 3d242eee298bd82c949db8a7cb1b43c2c8f71d81.

--- a/templates/static/home/css/tooplate-wedding-lite.css
+++ b/templates/static/home/css/tooplate-wedding-lite.css
@@ -966,25 +966,9 @@ strong {
 
 @media screen and (max-width: 575px) {
   .hero-container {
-    position: relative;
-    z-index: 0;
-    padding: 30px 15px !important;
-  }
-
-  .hero-section .row {
-    flex-direction: column;
-  }
-
-  .save-the-date-wrap {
-    position: relative;
-    z-index: 2;
-    margin-top: 30px;
-    order: 2;
-  }
-
-  .save-the-date-thumb {
-    transform: scale(0.8);
-    margin: -15px auto 0;
+    margin-right: 12px;
+    margin-left: 12px;
+    margin-bottom: 12px;
   }
 }
 
@@ -1010,25 +994,7 @@ strong {
   }
 
   .hero-container {
-    position: relative;
-    z-index: 0;
-    padding: 30px 15px !important;
-  }
-
-  .hero-section .row {
-    flex-direction: column;
-  }
-
-  .save-the-date-wrap {
-    position: relative;
-    z-index: 2;
-    margin-top: 30px;
-    order: 2;
-  }
-
-  .save-the-date-thumb {
-    transform: scale(0.8);
-    margin: -15px auto 0;
+    padding: 30px;
   }
 }
 
