--- a/templates/static/home/css/tooplate-wedding-lite.css
+++ b/templates/static/home/css/tooplate-wedding-lite.css
@@ -972,7 +972,25 @@ strong {
   }
 
   .hero-container {
-    padding: 30px;
+    position: relative;
+    z-index: 0;
+    padding: 30px 15px !important;
+  }
+
+  .save-the-date-wrap {
+    position: relative;
+    z-index: 2;
+    margin-top: 30px;
+    order: 2; /* Coloca o cartão após o conteúdo principal */
+  }
+
+  .hero-section .row {
+    flex-direction: column;
+  }
+
+  .save-the-date-thumb {
+    transform: scale(0.7);
+    margin: -15px auto 0;
   }
 }
 
