fix: aumento no tamanho da imagem do hero

--- a/templates/static/home/css/tooplate-wedding-lite.css
+++ b/templates/static/home/css/tooplate-wedding-lite.css
@@ -976,6 +976,7 @@ strong {
     z-index: 0;
     padding: 30px 15px !important;
     background-position: 80% 75%;
+    background-size: 500px;
   }
 
   .save-the-date-wrap {
